Update GPG keys

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,11 @@ jobs:
         jvm: 8
     - run: .github/scripts/gpg-setup.sh
       env:
-        PGP_SECRET: ${{ secrets.PGP_SECRET }}
+        PGP_SECRET: ${{ secrets.PUBLISH_SECRET_KEY }}
     - name: Release
       run: |
         ./mill publishSonatype __.publishArtifacts
       env:
-        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+        PGP_PASSPHRASE: ${{ secrets.PUBLISH_SECRET_KEY_PASSWORD }}
         SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
