Fix the (formerly broken) example and bump it to Mill 0.12.14

--- a/example/.scalafmt.conf
+++ b/example/.scalafmt.conf
@@ -5,6 +5,9 @@ fileOverride {
   "glob:**/build.sc" {
     runner.dialect = scala213
   }
+  "glob:**/build.mill.scala" {
+    runner.dialect = scala213
+  }
 }
 
 maxColumn = 120
